--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nithys-npm-code",
+  "name": "githubtraining-exercise-publish-package",
   "version": "0.0.0",
   "description": "Nithy's npm code",
   "main": "index.js",
